fixed a bug with z-index of texture

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -64,7 +64,7 @@
             background-repeat: no-repeat;
             background-position: top right;
             position: absolute;
-            z-index: -2;
+            z-index: 2;
             top: 0;
         }
         
